--- a/zoyothemes.html
+++ b/zoyothemes.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,600,700" rel="stylesheet">
 </head>
 
 <body>
@@ -225,6 +225,7 @@
                         <div class="right">
                             <div class="search-btn">
                                 <input type="text" placeholder="Search">
+                            
                             </div>
                             <div class="about">
                                 <div class="about-me">
